# gitted

./: .gitignore  .rubocop.yml  .rultor.yml  MANIFEST.in  Makefile  README.md  REUSE.toml  pyproject.toml  release.sh  requirements.txt  setup.py
.github/workflows/: bashate.yml  checkmake.yml  codecov.yml  copyrights.yml  flake8.yml  make.yml  markdown-lint.yml  pylint.yml  ruff.yml  shellcheck.yml  ty.yml  typos.yml  up.yml  uv.yml
fn/: ask-chatgpt-for-commit-message.sh  fail-if-not-git.sh
help/: branch.txt  commit.txt  pull.txt  push.txt
makes/: one-test.sh
scripts/: branch  commit  diff-to-message-via-chatgpt.sh  diff2msg  pull  push
src/gitted/: __init__.py  diff2msg.py  mcp_server.py
sub-scripts/: all.sh  commons.sh  intro.sh  sanity.sh
tests/: test_diff2msg.py  test_mcp_server.py  test_scripts.py
tests.sh/: branch-fails-if-exists-locally.sh  branch-fails-if-name-has-letters.sh  branch-fails-if-name-is-empty.sh  branch-fails-if-name-is-zero.sh  branch-fails-when-push-rejected.sh  commit-fails-on-unknown-branch.sh  commits-first-time.sh  commits-from-sub-directory.sh  commits-large-diff.sh  commits-on-main-branch.sh  commits-one-file.sh  prints-help.sh  pulls-from-upstream-into-branch.sh  pulls-from-upstream.sh  pulls-in-empty-repo.sh  pulls-once.sh  pulls-submodule-from-sub-directory.sh  pulls-when-submodule-has-local-changes.sh  pushes-creates-pull-request.sh  pushes-simple-changes.sh  pushes-skips-existing-pull-request.sh  pushes-to-empty-remote.sh  pushes-to-non-existing-branch.sh  pushes-when-no-changes.sh  pushes-when-remote-has-new-commits.sh  sanity-fails-when-git-is-not-installed.sh  sanity-fails-when-git-is-too-old.sh  skips-commit-when-no-changes.sh  skips-stash-if-empty.sh  starts-a-branch.sh
